--- a/styles/style.scss
+++ b/styles/style.scss
@@ -2,6 +2,7 @@
 // setup
 @import './setup/basic';
 @import './setup/mixins';
+@import './setup/vars';
 
 // components
 @import './components/tabs';
